--- a/Requirements/0x01.md
+++ b/Requirements/0x01.md
@@ -14,6 +14,7 @@
 * Внедрить автоматическое rebalancing данных на уровне физического и логического partitioning.
 * Реализовать advanced NUMA-aware memory reclaim (по GC метрикам).
 * Добавить поддержку SAP HANA-like delta merge между row-store и column-store.
+* delta merge между column-store и row-store, NUMA-aware GC reclaim и adaptive hot/cold page rebalancing.
 
 ## 2. Транзакционность и Надёжность
 
@@ -27,6 +28,7 @@
 * Расширить механизм multi-master consensus с conflict resolution.
 * Поддержка zero-downtime failover.
 * Распределённый WAL с quorum.
+* quorum-based WAL, поддержка conflict resolution в multi-master, 0-downtime миграции.
 
 ## 3. SQL и Языки
 
@@ -40,6 +42,7 @@
 * Поддержка Graph SQL.
 * Расширения: temporal tables VALID FROM/TO, bitemporal support.
 * Встроенный JIT-компилятор SQL выражений.
+* Graph SQL, temporal/bitemporal, встроенный JIT SQL runtime.
 
 ## 4. Интерфейсы и Интеграции
 
@@ -51,6 +54,7 @@
 * Интеграция с SAP BTP, OData, и native SAP ERP.
 * Поддержка cloud-native API (AWS Lambda, GCP Pub/Sub).
 * Поддержка CDC через Outbox pattern.
+* SAP BTP API, Outbox CDC, AWS Lambda Pub/Sub и OData v4.
 
 ## 5. BI, ML и OLAP
 
@@ -62,6 +66,7 @@
 * Поддержка graph analytics (PageRank, shortest path).
 * Встроенные ML-модели (AutoML, классификация, регрессия).
 * Генерация explainable AI / feature importance в SQL.
+* встроенные AutoML модели, explainable AI, graph analytics.
 
 ## 6. Безопасность
 
@@ -74,6 +79,7 @@
 * Поддержка label-based security (например, row security по классификации данных).
 * FIPS-совместимое шифрование.
 * Полноценная auditing pipeline с tamper-proof журналами.
+* label-based row security, FIPS crypto, journaling pipeline.
 
 ## 7. Observability и DevOps
 
@@ -88,6 +94,7 @@
 * Интеграция с Grafana dashboards по шаблонам.
 * Встроенная query flamegraph visualisation в UI.
 * Automatic alert tuning (machine learning based thresholds).
+* flamegraph UI, ML-алерты, Grafana дашборды из коробки.
 
 ## 8. Производительность
 
@@ -101,6 +108,7 @@
 * JIT для выражений в executor.
 * Предсказательная оптимизация плана на основе статистики прошлых выполнений.
 * Support for “late materialization” в column-store.
+* late materialization, JIT executor engine.
 
 ## 9. Расширяемость
 
@@ -112,6 +120,7 @@
 * IDE-like DSL расширения с inline-debug.
 * Dynamic module loading/unloading без перезапуска.
 * Self-describing UDF с GraphQL introspection.
+* inline-debug в DSL, dynamic load/unload, self-describing UDF.
 
 ## 10. Тестируемость и структура проекта
 
@@ -124,6 +133,7 @@
 * Mutation testing с coverage-порогами.
 * Real-time schema contract validation.
 * Эмулятор production-like нагрузки (из реальных WAL).
+* WAL replay stress runner, mutation coverage threshold enforcement.
 
 ## 11. Дополнительно
 
@@ -136,6 +146,7 @@
 * Интернационализация с ICU MessageFormat.
 * Встроенные механизмы миграции на уровне схем.
 * Web-based live schema designer/editor.
+* web-based live schema editor, ICU messages, instant schema translator.
 
 ---
 
