--- a/Roadmap/0x01.md
+++ b/Roadmap/0x01.md
@@ -1,1 +1,49 @@
+Требования к вашей In-Memory реляционной СУБД — **экстремально высокие**. Это уровень **SAP HANA++**, ориентированный на промышленную эксплуатацию в условиях:
+
+---
+
+## 🚀 **Обобщённая оценка уровня требований:**
+
+| Категория                           | Уровень требований                    | Комментарий                                                               |
+| ----------------------------------- | ------------------------------------- | ------------------------------------------------------------------------- |
+| **Производительность**              | 🟥 **Экстремальная (Tier-1)**         | >2 трлн записей/год, <1 мс latency, <500 нс для критических запросов      |
+| **Масштабируемость**                | 🟥 **Промышленная (Global-scale)**    | 500+ филиалов, шардирование, ребалансировка, NUMA-aware                   |
+| **Надёжность / отказоустойчивость** | 🟥 **Enterprise-grade (99.999% SLA)** | Active-active/Passive, Watchdog, WAL+Snapshot+Recovery                    |
+| **Архитектура хранения**            | 🟥 **Гибридная (Tiered In-Memory)**   | Row-, Column-, JSON-store, горячие/холодные данные, TTL, Auto-tiering     |
+| **Транзакционность**                | 🟥 **Полная ACID, MVCC**              | Snapshot Isolation, SERIALIZABLE fallback, GC/Vacuum                      |
+| **SQL и ЯП**                        | 🟧 **Advanced+ (SQL:2011+/DSL)**      | Recursive CTE, MATCH\_RECOGNIZE, PL/SQL-стиль процедуры, Lua/WASM/JS      |
+| **Безопасность**                    | 🟥 **Полный стек (RBAC+ABAC+TDE)**    | TLS/mTLS, predicate guards, SQL sandbox                                   |
+| **Интеграции и интерфейсы**         | 🟧 **Многопротокольные**              | REST, gRPC, Kafka, OpenAPI, external hooks                                |
+| **BI / OLAP / HTAP**                | 🟥 **Гибридные нагрузки HTAP**        | CUBE, ROLLUP, materialized views, SQL-inference с ONNX/PyTorch            |
+| **Наблюдаемость и отладка**         | 🟥 **Advanced Observability**         | OpenTelemetry, perf traces, Flamegraph, fault injection, mutation testing |
+| **Расширяемость**                   | 🟧 **Модульная с sandbox API**        | `dlopen`, C API, PostgreSQL wire протокол                                 |
+| **DevOps и CI/CD**                  | 🟧 **Интегрировано**                  | GitHub Actions, instant reload, live schema updates                       |
+
+---
+
+## 🔬 **Сравнение с промышленными СУБД**
+
+| Платформа      | Масштаб       | Latency             | Особенности                                                |
+| -------------- | ------------- | ------------------- | ---------------------------------------------------------- |
+| **SAP HANA**   | SAP ERP, HTAP | \~0.5–1 мс          | Columnar in-memory, OLAP + OLTP                            |
+| **Ваш проект** | > SAP HANA    | < 500 нс (critical) | Гибридное хранение + JIT + vector pipeline + AS OF queries |
+| **PostgreSQL** | Mid-scale     | 5–20 мс             | Disk-based, MVCC, без in-memory execution                  |
+| **VoltDB**     | OLTP only     | 1–3 мс              | Full in-memory, но ограниченный SQL, нет HTAP              |
+| **ClickHouse** | OLAP only     | \~20 мс             | Columnar, не ACID, нет MVCC, нет full transaction model    |
+
+---
+
+## 💡 **Вывод:**
+
+Ваша СУБД должна:
+
+* сочетать **HTAP**, **векторную обработку**, **асинхронные API**, **полную транзакционность** и **near-real-time аналитику**
+* обеспечивать **latency < 1 мс** при нагрузке **миллиарды строк в день**
+* включать **широкий стек интеграций, расширений и JIT-инференс**
+
+🔴 **Это уровень топ-5 промышленных СУБД в мире**, с амбициями превзойти SAP HANA в гибкости и архитектуре.
+
+---
+
+Если хочешь — могу рассчитать **оценку зрелости/сложности по шкале CMMI или SAP Benchmark TPC-H/TPC-C**.
 
