--- a/include/0x00.md
+++ b/include/0x00.md
@@ -1,1 +1,9 @@
+Ниже представлены 5 универсальных заголовочных файла для всей СУБД:
 
+| Название файла                                | Назначение                                           |
+| --------------------------------------------- | ---------------------------------------------------- |
+| 📄 [types.h]                                 | Универсальные типы идентификаторов                   |
+| 📄 [enums.h]                                 | Перечисления: статус, лог, план, соединения          |
+| 📄 [structs.h]                               | Общие структуры: ошибки, время, трассировки          |
+| 📄 [magic.h]                                 | Магические значения и ограничения                    |
+| 📄 [messages.h]                              | Справочник сообщений (ошибки, предупреждения, debug) |
