--- a/analysis/0x01.md
+++ b/analysis/0x01.md
@@ -1,1 +1,86 @@
-ч
+### 🧱 **Структура шаблона:**
+
+```
+<module>_<action>_<entity>
+```
+
+---
+
+### 📌 Примеры по архитектурным пакетам:
+
+#### 📦 Инициализация (`init`)
+
+| Функция               | Назначение            |
+| --------------------- | --------------------- |
+| `init_system_startup` | Инициализация системы |
+| `init_config_load`    | Загрузка конфигурации |
+| `init_logger_setup`   | Настройка логирования |
+
+---
+
+#### 📦 Планировщик (`planner`)
+
+| Функция                      | Назначение                            |
+| ---------------------------- | ------------------------------------- |
+| `planner_build_logical_tree` | Построение логического дерева запроса |
+| `planner_add_join_node`      | Добавление join в план запроса        |
+| `planner_validate_ast`       | Валидация AST перед планированием     |
+
+---
+
+#### 📦 Оптимизатор (`optimizer`)
+
+| Функция                   | Назначение                       |
+| ------------------------- | -------------------------------- |
+| `optimizer_apply_rules`   | Применить rule-based оптимизации |
+| `optimizer_estimate_cost` | Оценка стоимости плана           |
+| `optimizer_reorder_joins` | Перестановка join-порядка        |
+
+---
+
+#### 📦 MVCC (`mvcc`)
+
+| Функция                     | Назначение                     |
+| --------------------------- | ------------------------------ |
+| `mvcc_check_visibility`     | Проверка видимости по snapshot |
+| `mvcc_gc_chain`             | Очистка цепочки версий         |
+| `mvcc_create_version_entry` | Создание новой версии строки   |
+
+---
+
+#### 📦 WAL (`wal`)
+
+| Функция            | Назначение                    |
+| ------------------ | ----------------------------- |
+| `wal_append_entry` | Добавление записи в WAL       |
+| `wal_flush_log`    | Принудительная запись журнала |
+| `wal_replay_log`   | Воспроизведение WAL           |
+
+---
+
+#### 📦 CDC (`cdc`)
+
+| Функция                 | Назначение                  |
+| ----------------------- | --------------------------- |
+| `cdc_emit_event`        | Создание события изменений  |
+| `cdc_replay_event`      | Воспроизведение изменений   |
+| `cdc_register_consumer` | Регистрация потребителя CDC |
+
+---
+
+#### 📦 UDF (`udf`)
+
+| Функция                 | Назначение                           |
+| ----------------------- | ------------------------------------ |
+| `udf_register_function` | Регистрация пользовательской функции |
+| `udf_invoke_function`   | Вызов пользовательской функции       |
+
+---
+
+### 🧩 Состав шаблона:
+
+| Компонент | Описание                                                                                   |
+| --------- | ------------------------------------------------------------------------------------------ |
+| `module`  | Название логического модуля (`executor`, `wal`, `mvcc`, ...)                               |
+| `action`  | Действие: `init`, `create`, `drop`, `apply`, `run`, `check`, `load`, ...                   |
+| `entity`  | Объект над которым происходит действие: `plan`, `log`, `event`, `table`, `snapshot`, `udf` |
