--- a/Commands/0x00.md
+++ b/Commands/0x00.md
@@ -10,3 +10,8 @@
 ```
 "mode": "production_sap_hana_plus"
 ```
+Который запрещает:
+
+* заглушки,
+* непроверенные реализации,
+* временные имена и dummy-поля.
