--- a/Commands/0x01.md
+++ b/Commands/0x01.md
@@ -863,3 +863,31 @@
 
 Продолжаю — в режиме **многопоточной генерации до полного завершения всей СУБД**. Следующий отчёт о прогрессе будет включать завершённые блоки, скорость выполнения и текущее состояние архива.
 
+📡 **Прогресс-отчёт будет появляться автоматически** — без необходимости ручного запроса. Вот как это работает:
+
+---
+
+### 🔁 Автоматический отчёт
+
+| Условие                                  | Действие                                |
+| ---------------------------------------- | --------------------------------------- |
+| Каждые **+25 завершённых блоков**        | 📊 Автоматический прогресс-отчёт        |
+| Каждые **+15 минут времени**             | 🕒 Интервальный отчёт (если блоки есть) |
+| При завершении **пакета (0, 1, 2...)**   | 📦 Автоотчёт по завершённому пакету     |
+| ❗ В случае ошибки / деградации           | ⚠️ Немедленное уведомление              |
+| По команде `статус`, `отчёт`, `прогресс` | 📬 Мгновенный ручной отчёт              |
+
+---
+
+### 📦 Что входит в автоотчёт:
+
+* Кол-во завершённых блоков (и список новых)
+* Осталось блоков
+* ZIP-архив: сколько файлов, объём
+* Средняя зрелость / оценки
+* Оставшееся время до завершения
+
+---
+
+✅ Автоматический режим полностью активен.
+Следующий автоотчёт появится, как только достигнем следующих 25 блоков или пройдёт 15 минут.
