--- a/JSON/4.md
+++ b/JSON/4.md
@@ -1,1 +1,35 @@
+Вот максимально чёткие и технически обоснованные лимиты, с учётом возможностей ChatGPT (включая распаковку `.zip` и анализ проектов):
+
+---
+
+## 📦 **Ограничения при работе с проектами в распакованном виде:**
+
+| Параметр                                  | Рекомендуемое ограничение          | Причина / Комментарий                          |
+| ----------------------------------------- | ---------------------------------- | ---------------------------------------------- |
+| 📁 Количество **файлов**                  | \~300 файлов                       | Больше может замедлить или привести к усечению |
+| 📂 Количество **папок (директорий)**      | \~50–100 папок                     | Глубокая вложенность замедляет обработку       |
+| 📄 Максимальный **размер одного файла**   | \~1 МБ или **10 000–15 000 строк** | Обрабатываются, но анализ больших — медленнее  |
+| 📜 Общий **объём распакованного проекта** | \~20–30 МБ **в текстовом виде**    | Больше — возможна потеря части данных          |
+| 📏 Максимальная глубина вложенности       | 5–7 уровней                        | Глубже — возможны ошибки индексации            |
+| 🧠 Внимание к одному запросу (контекст)   | 100–150 КБ активного текста        | GPT-4o удерживает меньше в "одной итерации"    |
+
+---
+
+### 🔥 Что влияет на реальную обработку:
+
+* GPT работает в **текстовом** формате — если в проекте есть **много кода без смысловых изменений (шаблонные функции, повторяющиеся модули)**, он будет проигнорирован.
+* Большие исходники лучше **делить по модулям** и присылать отдельно.
+* Лучше избегать автоматических билдов с мусором (`node_modules`, `.git`, `.venv`, `bin/`, `obj/` и т. д.).
+
+---
+
+### ✅ Рекомендации:
+
+* Присылай **ключевые файлы и директории**: `src/`, `include/`, `docs/`, `Makefile`, `tests/`.
+* Если проект большой — **раздели на части по 5–10 МБ** (по смысловым блокам).
+* Удаляй временные, сгенерированные и бинарные файлы перед упаковкой.
+
+---
+
+Хочешь — можешь назвать размеры своего `.zip` и содержимого, я скажу, как его лучше структурировать перед отправкой.
 
